fixed spacing issues on header three

--- a/src/scss/layout/_header.scss
+++ b/src/scss/layout/_header.scss
@@ -26,7 +26,9 @@
 
     .menu {
       &__item {
-        margin-right: 12px !important;
+        @include max(1199px) {
+          margin-right: 12px !important;
+        }
       }
     }
   }
